@@ -28,7 +28,11 @@
 namespace SlimDX
 {
 	namespace Direct3D11
-	{	
+	{
+		/// <summary>
+		/// Specifies the subresources of a texture that are accessible from a depth-stencil view.
+		/// </summary>
+		/// <unmanaged>D3D11_DEPTH_STENCIL_VIEW_DESC</unmanaged>
 		public value class DepthStencilViewDescription : System::IEquatable<DepthStencilViewDescription>
 		{				
 		internal:
@@ -37,19 +41,79 @@ namespace SlimDX
 			D3D11_DEPTH_STENCIL_VIEW_DESC CreateNativeVersion();
 		
 		public:
+			/// <summary>
+			/// Resource data format.
+			/// </summary>
 			property DXGI::Format Format;
+
+			/// <summary>
+			/// Type of resource. Specifies how a depth-stencil resource will be accessed.
+			/// </summary>
 			property DepthStencilViewDimension Dimension;
+
+			/// <summary>
+			/// A value that describes whether the texture is read only.
+			/// </summary>
 			property DepthStencilViewFlags Flags;
+
+			/// <summary>
+			/// The index of the first mipmap level to use.
+			/// </summary>
 			property int MipSlice;
+
+			/// <summary>
+			/// The index of the first texture to use in an array of textures.
+			/// </summary>
 			property int FirstArraySlice;
+
+			/// <summary>
+			/// Number of textures to use.
+			/// </summary>
 			property int ArraySize;
 
+			/// <summary>
+			/// Tests for equality between two objects.
+			/// </summary>
+			/// <param name="left">The first value to compare.</param>
+			/// <param name="right">The second value to compare.</param>
+			/// <returns><c>true</c> if <paramref name="left"/> has the same value as <paramref name="right"/>; otherwise, <c>false</c>.</returns>
 			static bool operator == ( DepthStencilViewDescription left, DepthStencilViewDescription right );
+
+			/// <summary>
+			/// Tests for inequality between two objects.
+			/// </summary>
+			/// <param name="left">The first value to compare.</param>
+			/// <param name="right">The second value to compare.</param>
+			/// <returns><c>true</c> if <paramref name="left"/> has a different value than <paramref name="right"/>; otherwise, <c>false</c>.</returns>
 			static bool operator != ( DepthStencilViewDescription left, DepthStencilViewDescription right );
 
+			/// <summary>
+			/// Returns the hash code for this instance.
+			/// </summary>
+			/// <returns>A 32-bit signed integer hash code.</returns>
 			virtual int GetHashCode() override;
+
+			/// <summary>
+			/// Returns a value that indicates whether the current instance is equal to a specified object. 
+			/// </summary>
+			/// <param name="obj">Object to make the comparison with.</param>
+			/// <returns><c>true</c> if the current instance is equal to the specified object; <c>false</c> otherwise.</returns>
 			virtual bool Equals( System::Object^ obj ) override;
+
+			/// <summary>
+			/// Returns a value that indicates whether the current instance is equal to the specified object. 
+			/// </summary>
+			/// <param name="other">Object to make the comparison with.</param>
+			/// <returns><c>true</c> if the current instance is equal to the specified object; <c>false</c> otherwise.</returns>
 			virtual bool Equals( DepthStencilViewDescription other );
+
+			/// <summary>
+			/// Determines whether the specified object instances are considered equal. 
+			/// </summary>
+			/// <param name="value1">The first value to compare.</param>
+			/// <param name="value2">The second value to compare.</param>
+			/// <returns><c>true</c> if <paramref name="value1"/> is the same instance as <paramref name="value2"/> or 
+			/// if both are <c>null</c> references or if <c>value1.Equals(value2)</c> returns <c>true</c>; otherwise, <c>false</c>.</returns>
 			static bool Equals( DepthStencilViewDescription% value1, DepthStencilViewDescription% value2 );
 		};
 	}
